[package]
name = "search_replace"
version = "0.1.1"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
repository = "https://github.com/DoumanAsh/sr"
description = "Search and replace utility"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
regex = "1"
memmap = "0.7"
tempfile = "3"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[[bin]]
path = "src/main.rs"
name = "sr"
